tests/typing/good/testfile-struct-3.go
package main

type L struct { next *L }
func main() {}
