tests/typing/bad/testfile-recursive-1.go
package main
type S struct { s S }
func main() {}
